--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:orientation="vertical"
-    tools:context="com.javacodegeeks.androidstartactivityforresultexample.ActivityOne" >
+    tools:context="com.javacodegeeks.androidstartactivityforresultexample.ActivityOne"
+    android:weightSum="1">
 
     <TextView
         android:id="@+id/textView1"
@@ -41,4 +42,12 @@
         android:text="Bar Code"
         android:textSize="18dp" >
     </Button>
+
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:id="@+id/textView"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.10" />
 </LinearLayout>
